Trying visibility instead of display to hide and show hyperlinks.

--- a/public/communitymembers.html
+++ b/public/communitymembers.html
@@ -176,8 +176,8 @@
 
     function hideSignIn() {
       // Hide 'Sign In' hyperlink and show 'Sign Out' hyperlink
-      document.getElementById("signInHyperlink").style.display = "none";
-      document.getElementById("signOutHyperlink").style.display = "inline";
+      document.getElementById("signInHyperlink").style.visibility = "hidden";
+      document.getElementById("signOutHyperlink").style.visibility = "visible";
     }
     
     // Start listing users from the beginning, 1000 at a time.
