--- a/public/contact.html
+++ b/public/contact.html
@@ -198,8 +198,8 @@
 
     function hideSignIn() {
       // Hide 'Sign In' hyperlink and show 'Sign Out' hyperlink
-      document.getElementById("signInHyperlink").style.display = "none";
-      document.getElementById("signOutHyperlink").style.display = "inline";
+      document.getElementById("signInHyperlink").style.visibility = "hidden";
+      document.getElementById("signOutHyperlink").style.visibility = "visible";
     }
   </script>
 
